# alg

./: .gitignore  CLEAN_BRANCH_README.md  QUICK_START.md  README-ARCH-OPUS4.5.md  README-ARCH-QWEN3.md  README-TENSORBOARD.md  README.md  TENSORBOARD_GUIDE.md  coding-style.md  config.json  config.py  data.py  inference.py  model.py  parameters.py  pyproject.toml  tokenizer.py  train.py
configs/: data.yaml  model.json  tensorboard.json  train.yaml
docs/: BIGRAM_TO_LANGUAGEMODEL_REFACTORING.md  PREFILL_DECODE_REFACTORING.md  README-AIM.md  TRAIN_ARCHITECTURE.md
md/: coding-style.md  tensorboard-histograms.md
profiling/: PROFILING_GUIDE.md  PROFILING_SUMMARY.md  benchmark_model.py  create_benchmark_script.py  profiling_toolkit.py  setup_tensorboard_profiling.py  train_with_tensorboard_profiling.py
tensorboard/: config.py  instructions.py  logger.py  server.py  writer.py
tests/: test_tensorboard_config.py  test_tensorboard_instructions.py  test_tensorboard_logger.py  test_tensorboard_server.py  test_tensorboard_writer.py
utils/: __init__.py
utils/aim/: __init__.py  instructions.py  tracker.py
utils/alg/: __init__.py  migrate_config.py  utils_config_loader.py  utils_output.py  utils_run_manager.py
utils_aim/: __init__.py  instructions.py  tracker.py
utils_alg1/: __init__.py  migrate_config.py  utils_config_loader.py  utils_run_manager.py
utils_tensorboard/: __init__.py  config.py  instructions.py  logger.py  server.py
