[project]
name = "alg1"
version = "0.1.0"
description = "GPT Model Refactoring Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "numpy<2",
    "torch==2.2.2",
    "transformers>=5.1.0",
    "datasets>=4.5.0",
    "tokenizers>=0.22.2",
    "accelerate>=1.12.0",
    "huggingface-hub>=1.4.1",
    "trl>=0.27.2",
    "peft>=0.18.1",
    "evaluate>=0.4.6",
    "gradio>=6.5.1",
    "safetensors>=0.4.0",  # Required for secure model weight serialization
    "hypothesis>=6.0.0",  # Required for property-based testing
    "tensorboard>=2.11.0",  # Required for training visualization
]
