[project]
name = "alg1"
version = "0.1.0"
description = "GPT Model Refactoring Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "torchaudio>=2.10.0",
    "transformers>=5.1.0",
    "datasets>=4.5.0",
    "tokenizers>=0.22.2",
    "accelerate>=1.12.0",
    "huggingface-hub>=1.4.1",
    "trl>=0.27.2",
    "peft>=0.18.1",
    "evaluate>=0.4.6",
    "gradio>=6.5.1",
    "safetensors>=0.4.0",
    "hypothesis>=6.0.0",
    "tensorboard>=2.11.0",
    "jupyter>=1.1.1",
]
